# a-sink-openai

./: .gitignore  README.md  pyproject.toml  readme.md
.github/workflows/: publish.yml
examples/: basic_usage.py  basic_usage_structured_output.py
src/a_sink_openai/: __init__.py  chat.py
src/throttle_openai/: chat.py
