[tool.poetry]
name = "a-sink-openai"
version = "0.1.0"
description = "Concurrent Fast OpenAI calls with Automatic Rate Limiting to avoid hitting limits. Structured Outputs with Pydantic Base Models."
authors = ["Goutham <goutham794@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
openai = "^1.57.0"
aiohttp = "^3.11.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
